<resources>
    <!--SplashActivity-->
    <string name="app_name">MeTaskProject</string>
    <string name="str_metask">MeTask</string>
    <string name="str_app">App</string>

    <!--SignInActivity-->
    <string name="sign_in_pls_login_to_continue">Please login to continue</string>
    <string name="sign_in_username">Username</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_forgot_password">Forgot Password?</string>
    <string name="sign_in_btn_sign_in">Sign In</string>
    <string name="sign_in_no_account">Don\'t have an account?</string>
    <string name="sign_in_register">Register</string>

    <!--ContentDescriptions-->
    <string name="menu_button">Menu</string>
    <string name="date_today">Date Today</string>
    <string name="task_view">Task View</string>
    <string name="calendar_view">Calendar View</string>
    <string name="display_picture">Display Picture</string>
    <string name="log_out_button">Log Out</string>

    <!--DayActivity-->
    <string name="card_view_greeting_morning">Good morning!</string>
    <string name="card_view_greeting_afternoon">Good afternoon!</string>
    <string name="card_view_greeting_evening">Good evening!</string>
    <string name="card_view_number_of_tasks"> </string>
    <string name="tasks">Tasks</string>
    <string name="task">Task</string>

    <!--TaskActivity-->
    <string name="selected_task_date">Selected Task Date</string>
    <string name="toggle_button_on">Show All</string>
    <string name="toggle_button_off">My Tasks</string>
    <string name="left_arrow_button">Previous Day</string>
    <string name="right_arrow_button">Next Day</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="fab_create">Create Task</string>

    <!--BaseActivity-->
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <!--SideBar-->
    <string name="empty_string"> </string>

    <!--CreateTaskActivity-->
    <string name="back_button">Back</string>
    <string name="toolbar_create_task">Create Task</string>
    <string name="cv_edit_text_task_name">Task Name</string>
    <string name="cv_description">Description</string>
    <string name="cv_date">Date</string>
    <string name="cv_assignee">Assignee</string>
    <string name="btn_create">Create</string>
    <string name="cancel">Cancel</string>

    <!-- FCM -->
    <string name="msg_token_fmt"> </string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--AppBar-->
    <string name="current_date">Current Date</string>

    <!--DropDownItems-->
    <string name="dd_username">Username</string>

    <!--TaskItems-->
    <string name="ti_task_name">Task Name</string>
    <string name="ti_description">Description</string>

    <!--Register-->
    <string name="reg_cancel">Cancel</string>
    <string name="reg_sign_up">Sign Up</string>
    <string name="reg_text_username">Please enter a username.</string>
    <string name="reg_username">Username</string>
    <string name="reg_username_taken">Username already taken</string>
    <string name="reg_next">Next</string>
    <string name="reg_text_password">Please enter a password.</string>
    <string name="reg_input_password">Password</string>
    <string name="reg_confirm_password">Confirm Password</string>
    <string name="reg_password_match">Password does not match</string>
    <string name="reg_back">Back</string>
    <string name="reg_submit">Submit</string>
    
    <!--ForgotPassword-->
    <string name="fp_forgot_password">Forgot Password?</string>
    <string name="fp_enter_email">Enter the email address associated with your account.</string>
    <string name="fp_email_you_a_link">We will email you a link to reset your password.</string>
    <string name="fp_enter_email_address">Enter Email Address</string>
    <string name="fp_send">Send</string>
    <string name="fp_image_description">Box Question</string>
    <string name="fb_verify_button">Verify</string>
    <string name="fp_verification">Verification</string>
    <string name="fp_image_description2">Happy Box</string>
    <string name="fp_enter_code">Enter the verification code we just sent you on your email address.</string>
    <string name="fp_did_not_receive_code">If you didn\'t receive a code!</string>
    <string name="fp_resend">Resend</string>

    <!--ChangePassword-->
    <string name="cp_change_password">Change Password</string>
    <string name="cp_please_recreate">Please re-create a unique password.</string>
    <string name="cp_new_password">New Password</string>
    <string name="cp_confirm_password">Confirm Password</string>
    <string name="cp_image_description">Box Waving</string>
    <string name="cp_confirm_button">Confirm</string>

</resources>