<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignInActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/si_margin"
        android:layout_marginBottom="@dimen/si_margin"
        android:text="@string/str_metask"
        android:textSize="@dimen/si_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_app_icon"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toEndOf="@+id/iv_app_icon"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    <ImageView
        android:id="@+id/iv_app_icon"
        android:layout_width="@dimen/si_icon_size"
        android:layout_height="@dimen/si_icon_size"
        android:padding="@dimen/si_padding"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_top"
        app:srcCompat="@drawable/mdi___calendar_clock" />

    <TextView
        android:id="@+id/tv_login_to_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/si_margin"
        android:layout_marginTop="@dimen/si_margin2"
        android:layout_marginEnd="@dimen/si_margin"
        android:textColor="@color/light_gray"
        android:text="@string/sign_in_pls_login_to_continue"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/iv_app_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/si_margin"
        android:layout_marginTop="@dimen/si_margin2"
        android:layout_marginEnd="@dimen/si_margin"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_to_continue">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_username_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_username"
            android:importantForAccessibility="no"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/light_gray"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/si_margin"
        android:layout_marginTop="@dimen/si_margin2"
        android:layout_marginEnd="@dimen/si_margin"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_in_password"
            android:importantForAccessibility="no"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/light_gray" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/si_margin2"
        android:layout_marginEnd="@dimen/si_margin"
        android:backgroundTint="@color/white"
        android:drawablePadding="@dimen/si_padding2"
        android:textColor="@color/light_gray"
        app:drawableLeftCompat="@drawable/mdi___key"
        android:text="@string/sign_in_forgot_password"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="@dimen/si_btn_size"
        android:layout_marginStart="@dimen/si_margin2"
        android:layout_marginTop="@dimen/si_margin3"
        android:layout_marginEnd="@dimen/si_margin2"
        android:backgroundTint="@color/light_gray"
        android:text="@string/sign_in_btn_sign_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/tv_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/si_margin"
        android:layout_marginTop="@dimen/si_margin3"
        android:layout_marginEnd="@dimen/si_margin"
        android:text="@string/sign_in_no_account"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/si_margin2"
        android:text="@string/sign_in_register"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/tv_no_account"
        app:layout_constraintStart_toStartOf="@+id/tv_no_account"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_account" />

    <!--Guidelines-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/si_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/si_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/si_guideline2" />

</androidx.constraintlayout.widget.ConstraintLayout>