<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ForgetPassActivity">

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fp_margin2"
        android:text="@string/fp_forgot_password"
        android:textStyle="bold"
        android:textSize="@dimen/fp_text_size2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    <ImageView
        android:id="@+id/curious"
        android:layout_width="0dp"
        android:layout_height="@dimen/fp_image_height"
        android:layout_marginTop="@dimen/fp_margin2"
        android:layout_marginStart="@dimen/fp_margin2"
        android:layout_marginEnd="@dimen/fp_margin2"
        android:contentDescription="@string/fp_image_description"
        android:src="@drawable/curious_toast"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

    <TextView
        android:id="@+id/tv_enter_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fp_margin2"
        android:gravity="center"
        android:text="@string/fp_enter_email"
        android:textSize="@dimen/fp_text_size2"
        app:layout_constraintEnd_toEndOf="@+id/curious"
        app:layout_constraintStart_toStartOf="@+id/curious"
        app:layout_constraintTop_toBottomOf="@+id/curious" />

    <EditText
        android:id="@+id/et_enter_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fp_margin2"
        android:gravity="center"
        android:hint="@string/fp_enter_email_address"
        android:padding="@dimen/fp_padding"
        android:textSize="@dimen/fp_text_size2"
        android:textColor="@color/light_gray2"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        app:layout_constraintEnd_toEndOf="@+id/tv_enter_email"
        app:layout_constraintStart_toStartOf="@+id/tv_enter_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_email"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_we_will_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fp_margin2"
        android:gravity="center"
        android:text="@string/fp_email_you_a_link"
        android:textColor="@color/light_gray2"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/et_enter_email"
        app:layout_constraintStart_toStartOf="@+id/et_enter_email"
        app:layout_constraintTop_toBottomOf="@+id/et_enter_email"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fp_margin2"
        android:backgroundTint="@color/light_gray"
        android:text="@string/fp_send"
        android:textColor="@color/white"
        android:textSize="@dimen/fp_text_size2"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/tv_we_will_email"
        app:layout_constraintStart_toStartOf="@+id/tv_we_will_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_we_will_email"
        tools:ignore="TextContrastCheck" />

    <!--Guidelines-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/fp_guidelines" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/fp_guidelines" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/fp_guidelines" />

</androidx.constraintlayout.widget.ConstraintLayout>