<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <ImageButton
        android:id="@+id/ib_previous"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/left_arrow_button"
        app:layout_constraintEnd_toStartOf="@+id/tv_select_task_date"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:srcCompat="@drawable/left_arrow" />

    <TextView
        android:id="@+id/tv_select_task_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_task_date"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ib_previous"
        app:layout_constraintEnd_toStartOf="@+id/ib_previous"
        app:layout_constraintStart_toEndOf="@+id/ib_previous"
        app:layout_constraintTop_toTopOf="@+id/ib_previous" />

    <ImageButton
        android:id="@+id/ib_next"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/right_arrow_button"
        app:layout_constraintStart_toEndOf="@+id/tv_select_task_date"
        app:layout_constraintTop_toTopOf="@+id/ib_previous"
        app:srcCompat="@drawable/right_arrow" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:backgroundTint="@color/white"
        android:gravity="center_horizontal"
        android:textAllCaps="false"
        android:textColor="@color/light_gray"
        android:textOff="@string/toggle_button_off"
        android:textOn="@string/toggle_button_on"
        android:textSize="9sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/tv_select_task_date" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_activity_task"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/toggleButton"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ib_previous"
        tools:listitem="@layout/tasks_item" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        app:backgroundTint="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:srcCompat="@drawable/ic_baseline_add_24" />

</androidx.constraintlayout.widget.ConstraintLayout>