<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.VerificationActivity">

    <TextView
        android:id="@+id/tv_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fp_margin3"
        android:text="@string/fp_verification"
        android:textSize="@dimen/fp_text_size2"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    <ImageView
        android:id="@+id/iv_happy"
        android:layout_width="0dp"
        android:layout_height="@dimen/fp_image_height"
        android:layout_marginTop="@dimen/fp_margin2"
        android:contentDescription="@string/fp_image_description2"
        android:src="@drawable/happy_toast"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_verify" />

    <TextView
        android:id="@+id/tv_enter_verification_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fp_margin2"
        android:layout_marginTop="@dimen/fp_margin2"
        android:layout_marginEnd="@dimen/fp_margin2"
        android:gravity="center"
        android:text="@string/fp_enter_code"
        android:textSize="@dimen/fp_text_size2"
        app:layout_constraintEnd_toEndOf="@+id/iv_happy"
        app:layout_constraintStart_toStartOf="@+id/iv_happy"
        app:layout_constraintTop_toBottomOf="@+id/iv_happy" />

    <EditText
        android:id="@+id/et_code1"
        android:layout_width="@dimen/fp_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fp_margin2"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:minHeight="@dimen/fp_min_height"
        app:layout_constraintEnd_toStartOf="@+id/et_code2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_verification_code"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_code2"
        android:layout_width="@dimen/fp_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fp_margin2"
        android:inputType="number"
        android:maxLength="1"
        android:minHeight="@dimen/fp_min_height"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toStartOf="@+id/et_code3"
        app:layout_constraintStart_toEndOf="@+id/et_code1"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_verification_code"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_code3"
        android:layout_width="@dimen/fp_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fp_margin2"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLe="1"
        android:minHeight="@dimen/fp_min_height"
        app:layout_constraintEnd_toStartOf="@+id/et_code4"
        app:layout_constraintStart_toEndOf="@+id/et_code2"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_verification_code"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_code4"
        android:layout_width="@dimen/fp_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fp_margin2"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="1"
        android:minHeight="@dimen/fp_min_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_code3"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_verification_code"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fp_margin2"
        android:text="@string/fp_did_not_receive_code"
        android:textColor="@color/light_gray2"
        android:textSize="@dimen/fp_text_size"
        app:layout_constraintEnd_toStartOf="@+id/fp_resend"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/et_code1"
        app:layout_constraintTop_toBottomOf="@+id/et_code2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/fp_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fp_resend"
        android:textColor="@color/sunset"
        android:textSize="@dimen/fp_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/et_code4"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fp_margin2"
        android:backgroundTint="@color/light_gray"
        android:text="@string/fb_verify_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <!--Guidelines-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/fp_guidelines" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/fp_guidelines" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/fp_guidelines" />


</androidx.constraintlayout.widget.ConstraintLayout>